# plugin-sdk-cmake

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/ColouredObjects/: CMakeLists.txt
examples/CreateCar/: CMakeLists.txt
examples/DXFont/: CMakeLists.txt
examples/FullNitrousControl/: CMakeLists.txt
examples/GPS/: CMakeLists.txt
examples/HandSignals/: CMakeLists.txt
examples/Neon/: CMakeLists.txt
examples/OpenDoorExample/: CMakeLists.txt
examples/PedPainting/: CMakeLists.txt
examples/PedSpawner/: CMakeLists.txt
examples/PlayerWeapon/: CMakeLists.txt
examples/RotateDoor/: CMakeLists.txt
examples/ScriptCommands/: CMakeLists.txt
examples/Speedometer/: CMakeLists.txt
examples/Texture/: CMakeLists.txt
examples/TimeNotTouchingPadOpcode/: CMakeLists.txt
examples/UniversalTurnlights/: CMakeLists.txt
examples/VehicleRemap/: CMakeLists.txt
examples/VehicleSpawner/: CMakeLists.txt
plugin_III/: CMakeLists.txt
plugin_III/game_III/meta/: meta.CMotionBlurStreaks.h
plugin_sa/: CMakeLists.txt
plugin_sa/game_sa/: CAEAudioEnvironment.cpp  CAEAudioEnvironment.h  CAEAudioHardware.cpp  CAESoundManager.cpp  CAESoundManager.h  CAudioEngine.cpp  CAudioEngine.h
plugin_vc/: CMakeLists.txt
shared/: Base.h  CMakeLists.txt
tools/cmake/: plugin-sdk-config.cmake
